--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
-    paths: [ "rust" ]
+    paths: [ "rust/**" ]
   pull_request:
     branches: [ "main" ]
-    paths: [ "rust" ]
+    paths: [ "rust/**" ]
 
 env:
   CARGO_TERM_COLOR: always
