--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          cache-dependency-path: 'typescript/package-lock.json'
       - run: npm ci
         working-directory: "typescript"
       - run: npm run build
