--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
           cache-dependency-path: 'typescript/package-lock.json'
-      - run: npm ci
+      - run: npm i
         working-directory: "typescript"
       - run: npm run build
         working-directory: "typescript"
